[project]
name = 'matdistort'
version = "0.0.1"
description = "Automated function for setting up VASP calculations"
authors = [{ name = "Zach Van Fossan", email = "zvanfossan@gmail.com"}]
requires-python = ">=3.9"
readme = "READ.md"
dependencies = [
    "numpy>=1.26.4"
    "pymatgen>=2024.6.10"
    ]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[testpypi]
username = __token__
password = pypi-AgENdGVzdC5weXBpLm9yZwIkNGIyYWQ3NjgtNzU5MC00ODdkLTllZDEtNjQ3YjEyZDM3NjBiAAIqWzMsImZlMzIxNTc3LWYzODQtNDE0MC05M2FkLTM4ZmYzM2YzOGE1MiJdAAAGIFx98wbGiWdJ6D9MFwe7NUYcBneEMg3dmUAVlTe2p2Cz